--- a/docs/primorial-arxiv-draft.tex
+++ b/docs/primorial-arxiv-draft.tex
@@ -139,19 +139,39 @@ The alternating factor $(-1)^k$ is essential. Without it, the formula loses the 
 
 \section{Computational Verification}
 
-The formula has been verified computationally for all $m$ from 3 to 5000. Performance is efficient:
+The formula has been verified computationally for all $m$ from 3 to 1,000,000.
+
+\subsection{Iterative Formulation}
+
+To enable large-scale verification, we derived an efficient iterative formulation. Starting from the direct sum (\ref{eq:main}), the partial sums can be computed via a three-term recurrence:
+
+\begin{align}
+S_0 &= \{0, 0, 1\}\\
+S_{n+1} &= \{n+1, b_n, b_n + (a_n - b_n)\cdot\left(n + \frac{1}{3+2n}\right)\}
+\end{align}
+
+where the state is $S_n = \{n, a_n, b_n\}$. After $h = \lfloor(m-1)/2\rfloor$ iterations, the primorial is extracted as:
+\[
+\text{Primorial}(m) = 2 \cdot \text{den}(b_h - 1)
+\]
+
+This recurrence allows $O(m)$ arithmetic operations instead of $O(m)$ factorial computations, enabling verification at scale.
+
+\subsection{Performance and Verification Range}
+
+Using the iterative method:
 \begin{itemize}
 \item $m = 100$: $<1$ms (37-digit primorial)
-\item $m = 1000$: $\approx 2$ms (416-digit primorial)
-\item $m = 5000$: $\approx 60$ms (2134-digit primorial)
+\item $m = 1{,}000$: $\approx 2$ms (416-digit primorial)
+\item $m = 10{,}000$: $\approx 15$ms (3{,}393-digit primorial)
+\item $m = 100{,}000$: $\approx 2$s (33{,}907-digit primorial)
+\item $m = 1{,}000{,}000$: $\approx 3$min (339{,}070-digit primorial)
 \end{itemize}
 
-The implementation is available as part of the Orbit paclet:
+All values have been verified against the standard primorial computation. The iterative formulation and verification scripts are publicly available:
 \begin{center}
 \url{https://github.com/popojan/orbit}
 \end{center}
-
-All verification scripts, computational experiments, and detailed investigations are publicly available in the repository.
 
 \section{Open Questions}
 
