feat: primal forest viz, correct my name

--- a/docs/primal-forest-paper.tex
+++ b/docs/primal-forest-paper.tex
@@ -9,7 +9,7 @@
 \title{The Primal Forest:\\
 A Bird's Eye View of the Sieve of Eratosthenes}
 
-\author{Jan Pospíšil}
+\author{Jan Popelka}
 
 \date{\today}
 
